# capybarpg

./: .clang-format  .gitignore  Architecture.md  CREDITS.md  README.md  meson.build  test.spv
base/: bed_test.blend  bed_test.blend1  opencolonist.toml  order.toml
benchmark/: fast_a_star.c  fast_queue.c  jps.c  map1.txt
example/: maidenless.qh
source/: maidenless.c
source/client/: cl_client.c  cl_client.h  cl_console.c  cl_imgui.cpp  cl_input.h
source/common/: c_job.c  c_job.h  c_profiler.c  c_profiler.h  c_queue.c  c_queue.h  c_terminal.h
source/game/: g_bindings.c  g_data.c  g_game.c  g_game.h  g_localization.c  g_private.h  g_shape.c  g_terrain.c  g_ui.c
source/shaders/: gbuffer.frag.glsl  gbuffer.vert.glsl  global_ubo.glsl  immediate.frag.c  immediate.frag.glsl  immediate.vert.c  immediate.vert.glsl  shading.comp.glsl  test.c  text.frag.c  text.frag.glsl  text.vert.glsl
source/shaders/systems/: components.glsl  model_matrix_frustum.comp.glsl  path_finding.comp.glsl
source/vk/: vk.c  vk_gbuffer.c  vk_immediate.c  vk_private.h  vk_shading.c.dont  vk_system.c  vk_system.h  vk_vulkan.h
